--- a/pytorch webpage tutorials/Neural Networks in Pytorch.ipynb
+++ b/pytorch webpage tutorials/Neural Networks in Pytorch.ipynb
@@ -2,6 +2,252 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining the network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (conv1): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (conv2): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
+      "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+      "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        # conv layers\n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=6, kernel_size=5)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5)\n",
+    "        \n",
+    "        # fc layers\n",
+    "        self.fc1 = nn.Linear(in_features=16*5*5, out_features=120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # Max pooling over a 2x2 window\n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2,2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), 2)\n",
+    "        x = x.view(-1, self.num_flat_features(x))\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def num_flat_features(self, x):\n",
+    "        size = x.size()[1:] # all dimensions except the batch dimension\n",
+    "        num_features = 1\n",
+    "        for s in size:\n",
+    "            num_features *= s\n",
+    "        return num_features\n",
+    "    \n",
+    "net = Net()\n",
+    "print(net)     \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "torch.Size([6, 1, 5, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "params_learnable = list(net.parameters())\n",
+    "print(len(params_learnable))\n",
+    "print(params_learnable[0].size()) # conv1's weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0279,  0.0555, -0.1139, -0.1128, -0.0451, -0.0589,  0.0624,  0.0042,\n",
+      "         -0.1324, -0.0167]], grad_fn=<AddmmBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(1, 1, 32, 32) # input images will be of size 32x32\n",
+    "out = net(input)\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.zero_grad()\n",
+    "out.backward(torch.randn(1,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loss Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.5660, grad_fn=<MseLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = net(input)\n",
+    "target = torch.randn(10)\n",
+    "target = target.view(1,-1) #reshaping the target to output shape\n",
+    "criterion = nn.MSELoss()\n",
+    "\n",
+    "loss = criterion(output, target)\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<MseLossBackward object at 0x00000205CA4BF438>\n",
+      "<AddmmBackward object at 0x00000205CA4BFDD8>\n",
+      "<AccumulateGrad object at 0x00000205CA4BF438>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.grad_fn) #MSE Loss\n",
+    "print(loss.grad_fn.next_functions[0][0]) #Linear\n",
+    "print(loss.grad_fn.next_functions[0][0].next_functions[0][0]) #ReLU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backpropagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conv1.bias.grad before backward propagation\n",
+      "tensor([0., 0., 0., 0., 0., 0.])\n",
+      "conv1.bias.grad after backward propagation\n",
+      "tensor([ 0.0049, -0.0155,  0.0024,  0.0104,  0.0051, -0.0125])\n"
+     ]
+    }
+   ],
+   "source": [
+    "net.zero_grad()\n",
+    "\n",
+    "print('conv1.bias.grad before backward propagation')\n",
+    "print(net.conv1.bias.grad)\n",
+    "\n",
+    "loss.backward()\n",
+    "\n",
+    "print('conv1.bias.grad after backward propagation')\n",
+    "print(net.conv1.bias.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "\n",
+    "for f in net.parameters():\n",
+    "    f.data.sub_(f.grad.data*learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "different update rules already have <b>built in optimizers</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "# creation of an optimizer\n",
+    "optimizer = optim.SGD(net.parameters(), lr = 0.01)\n",
+    "\n",
+    "# in our training loop:\n",
+    "optimizer.zero_grad()\n",
+    "output = net(input)\n",
+    "loss = criterion(output, target)\n",
+    "loss.backward()\n",
+    "optimizer.step() #updates weights"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
